<resources>
    <string name="app_name">Book A Barber</string>
    <string name="Required">Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="updating_data">Saving data</string>
    <string name="registration">Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="address">Address</string>
    <string name="register">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>