<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        android:background="@color/bg_color"
        tools:context=".commondata.activities.Login">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:background="@drawable/custom_shape"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profilePicture"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="Barbar booking app"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    style="@style/OutlinedRoundedBox"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    android:layout_marginTop="@dimen/_40sdp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    style="@style/OutlinedRoundedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_height="match_parent"
                        />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_60sdp"
                    app:cornerRadius="@dimen/_20sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    />

                <TextView
                    android:id="@+id/signup_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    android:text="Don't have an account, SignUp"
                    />


            </LinearLayout>
        </ScrollView>



    </LinearLayout>

</layout>
